# elektron-net

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Quick-Install.md  README.md  TECHNICAL_SETUP.md  WHITEPAPER.md  Whitepaper_2.md  right-to-be-forgotten.md
.claude/: settings.local.json
.github/workflows/: windows.yml
ci/test/: 03_test_script.sh
cmake/: windows-app.manifest.in
cmake/module/: GenerateSetupNsi.cmake  Maintenance.cmake
cmake/script/: Coverage.cmake
contrib/faucet/: .env  .env.example  README.md  package-lock.json  package.json  server.js
contrib/init/: README.md  bitcoind.conf  bitcoind.openrc  bitcoind.openrcconf  bitcoind.service  org.elektron.elektrond.plist
contrib/macdeploy/: detached-sig-create.sh  macdeployqtplus
contrib/seeds/: nodes_main.txt  nodes_signet.txt  nodes_test.txt  nodes_testnet4.txt
doc/: AUDIT_PRUNING_SNAPSHOT.md  hardfork-v3.0.1-stoic-awakening.md  init.md
mining/: CMakeLists.txt  GENESIS.md  README.md  config.json  generate_address.py  mine_genesis.py  miner.cpp  miner.py  test_bech32_debug.py
share/: setup.nsi.in
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  (+2 more)
src/: CMakeLists.txt  addresstype.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-res.rc  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  init.cpp  net_processing.cpp  net_processing.h  pow.cpp  protocol.h  validation.cpp  validation.h
(+92 files in other folders)
